@@ -7,7 +7,7 @@ import java.util.stream.Collectors;
 
 /* Пример работы программы:
 Введите список целых чисел через пробел, например 1 2 3 4 5 6 7 8 9 10
-Введите число, на которое должны делиться числа из списка, например 3
+Введите число, на которое должны делиться числа из списка без остатка, например 3
 Результат работы программы:
 Числа, которые делятся на 3 без остатка: [3, 6, 9]*/
 
@@ -23,8 +23,7 @@ public class example_6 {
         System.out.print("Введите число, на которое должны делиться числа из списка: ");
         int divisor = scanner.nextInt();
         List<Integer> result = numbers.stream()
-                .filter(n -> n % divisor == 0)
-                .collect(Collectors.toList());
+                .filter(n -> n % divisor == 0).toList();
         System.out.println("Числа, которые делятся на " + divisor + " без остатка: " + result);
     }
 }
